--- a/BankApp.CLI2/BankApp.CLI2.csproj
+++ b/BankApp.CLI2/BankApp.CLI2.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BankApp.Services\BankApp.Services.csproj" />
+  </ItemGroup>
+
 </Project>
